# Huffman-Coding

./: Huffman-Coding.cabal  HuffmanTree.hs  README.md  huffman-prototype.hs  main.hs
src/: HuffmanTree.hs  Main.hs
